Update: Tambahkan tautan sosial media di index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             <h1>Selamat Datang di IF.Algoritma website kelas kami !</h1>
             <p>Temukan keseruan, kekompakan, kreativitas, serta cerita menarik kelas kami.</p>
         </div>
+        <div class="social-icons">
+                <a href="LINK_INSTAGRAM_ANDA" target="_blank" class="social-icon instagram">
+                    [INSTAGRAM] 
+                </a>
+                <a href="LINK_TIKTOK_ANDA" target="_blank" class="social-icon tiktok">
+                    [TIKTOK]
+                </a>
+            </div>
+        </div>
     </section>
     <main>
         <section id="spotlight-prestasi">
