--- a/struktur.html
+++ b/struktur.html
@@ -10,7 +10,7 @@
     <header class="main-header">
         <div class="container"> 
             <div class="logo-container">
-                <img src="/image/logo.jpg" alt="Logo IF.Algoritma" class="header-logo">
+                <img src="image/logo.jpg" alt="Logo IF.Algoritma" class="header-logo">
                 <span class="site-title">IF.Algoritma</span>
             </div>
             <nav class="main-nav">
