--- a/anggota.html
+++ b/anggota.html
@@ -214,7 +214,7 @@
                         <h3>Rani Maharani</h3>
                         <h4>5520124026</h4>
                         <p class="role">Sekertaris Kelas</p>
-                        <blockquote>"quotes"</blockquote>
+                        <blockquote>"kadang pisau tak harus berbentuk tajam "</blockquote>
                     </div>
 
                     <div class="anggota-card">
@@ -230,7 +230,7 @@
                         <h3>Robi Septiandi</h3>
                         <h4>5520124028</h4>
                         <p class="role">Wakil Ketua Kelas</p>
-                        <blockquote>"quotes"</blockquote>
+                        <blockquote>"ada labu ,ada garam .. yang lalu sudah karam "</blockquote>
                     </div>
 
                     <div class="anggota-card">
@@ -238,7 +238,7 @@
                         <h3>Syarifah Nadia Alysyia</h3>
                         <h4>5520124030</h4>
                         <p class="role">Anggota Biasa</p>
-                        <blockquote>"quotes"</blockquote>
+                        <blockquote>"ngantukkk "</blockquote>
                     </div>
 
                     <div class="anggota-card">
