protoype slide attribute #2

--- a/galeri.html
+++ b/galeri.html
@@ -25,13 +25,9 @@
         </div>
     </header>
         <div class="content">
-            <h1 style="text-align: center; padding-top: 20px;">2025</h1>
+            <h1 id="Tahun">2025</h1>
             <div class="foto">
-                <img class="slide_kiri" src="image/aam.jpg">
-                <img class="slide_kiri" src="image/aldi.jpg">
-                <img class="slide_kiri" src="image/faza.JPG">
-                <img class="slide_kiri" src="image/bimo.jpg">
-                <img class="slide_kiri" src="image/nanda.jpg">
+                <img class="slide_kiri" id="main1" src="image/aam.jpg">
             </div>
         </div>
 
