--- a/galeri.html
+++ b/galeri.html
@@ -27,12 +27,10 @@
         <div class="content">
             <h1 id="Tahun">2025</h1>
             <div class="foto">
-                <img class="slide_kiri" id="main1" src="image/aam.jpg">
+                <img class="foto1" src="image/aam.jpg" onclick="slideFunction()">
             </div>
         </div>
 
-        <script>
-
-        </script>
+        <script src="js/script.js"></script>
 </body>
 </html>
