reworked gallery function
couple idea got scrapped since it keep not working as i want it (like the slide)

--- a/galeri.html
+++ b/galeri.html
@@ -26,9 +26,9 @@
     </header>
         <div class="content">
             <h1 id="Tahun">2025</h1>
-            <div class="foto">
+            <div class="foto" id="fotos">
                 <img class="main1" src="image/aam.jpg" onclick="slideFunction()">
-                <img class="sub" src="image/aldi.jpg">
+                
             </div>
         </div>
 
