add override function

--- a/galeri.html
+++ b/galeri.html
@@ -46,7 +46,7 @@
             <br>
             <h1>SCHOOLS</h1>
         </div>
-        <div class="block" id="block2">
+        <div class="block" id="block2" onclick="show2()">
             <img src="image/kela2.jpg">
         </div>
         <div class="block" id="block3">
