complete add img to gallery

--- a/anggota.html
+++ b/anggota.html
@@ -113,7 +113,7 @@
                     </div>
 
                     <div class="anggota-card">
-                        <img src="image/" alt="Foto Anggota 2" class="anggota-foto">
+                        <img src="image/kevin.jpeg" alt="Foto Anggota 2" class="anggota-foto">
                         <h3>La Ode Kevin</h3>
                         <h4>5520124011</h4>
                         <p class="role">Anggota Biasa</p>
@@ -242,11 +242,11 @@
                     </div>
 
                     <div class="anggota-card">
-                        <img src="image/anggota_2.jpg" alt="Foto Anggota 2" class="anggota-foto">
+                        <img src="image/tolut.jpeg" alt="Foto Anggota 2" class="anggota-foto">
                         <h3>Tolut</h3>
                         <h4>5520124031</h4>
                         <p class="role">Anggota Biasa</p>
-                        <blockquote>"quotes"</blockquote>
+                        <blockquote>"Terimakasih sudah terlahir"</blockquote>
                     </div>
 
                     <div class="anggota-card">
