--- a/galeri.html
+++ b/galeri.html
@@ -52,15 +52,17 @@
             <br>
             <h1>INAGURASI</h1>
         </div>
-        <div class="block" id="block3">
-            <img src="image/kela2.jpg">
+        <div class="block" id="block3" onclick="show3()">
+            <img src="image/villa/38.jpg">
             <br><br>Gallery
             <br>
             <h1>VILLA</h1>
         </div>
-        <div class="block" id="block4">
+        <div class="block" id="block4" onclick="show4()">
             <img src="image/kelas.jpg" style="">
-            <br>4
+            <br><br>Gallery
+            <br>
+            <h1>KELAS</h1>
         </div>
     </div>
     <div  class="photos" id="photos">
