--- a/anggota.html
+++ b/anggota.html
@@ -246,7 +246,7 @@
                         <h3>Tolut</h3>
                         <h4>5520124031</h4>
                         <p class="role">Anggota Biasa</p>
-                        <blockquote>"Terimakasih sudah terlahir"</blockquote>
+                        <blockquote>"aku mau gambar"</blockquote>
                     </div>
 
                     <div class="anggota-card">
