--- a/galeri.html
+++ b/galeri.html
@@ -59,7 +59,7 @@
             <h1>VILLA</h1>
         </div>
         <div class="block" id="block4" onclick="show4()">
-            <img src="image/kelas.jpg" style="">
+            <img src="image/kelas/3.jpg" style="">
             <br><br>Gallery
             <br>
             <h1>KELAS</h1>
