--- a/galeri.html
+++ b/galeri.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="js/script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery IF A</title>
     <link rel="stylesheet" href="css/Image_Style.css">
 </head>
+
 <body>
     <header class="main-header">
         <div class="container">
@@ -67,11 +69,13 @@
     </div>
     <div  class="photos" id="photos">
     </div>
-    <script src="js/script.js"></script>
+    
     <footer>
         <div class="container">
             <p>&copy;2025 IF.Algoritma. Dibuat dengan HTML, CSS, dan JavaScript.</p>
         </div>
     </footer>
+    <div id="up1" onclick="scrollUp()"></div>
 </body>
+
 </html>
