--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>&copy;2025 IF.Algoritma. Dibuat dengan HTML, CSS, dan JavaScript.</p>
         </div>
     </footer>
-    
     <script src="js/script.js"></script>
+    <div id="up1" onclick="scrollUp()"></div>
 </body>
 </html>
